--- a/work.html
+++ b/work.html
@@ -16,21 +16,12 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
 
             </ul>
         </nav>
     </header>
-
-    <main>
-        <section class="hero">
-            <h2>Hi, I'm Angelica</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eveniet delectus dicta aperiam libero, repudiandae quibusdam labore, accusantium a asperiores molestiae doloribus laboriosam perferendis, vel at? Repellendus, voluptatem assumenda. Neque repudiandae magnam non vel tempora molestiae delectus distinctio soluta perferendis?</p>
-        </section>
-
-    </main>
 
     <footer>
         <nav class="social-nav">
