--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
 
             </ul>
         </nav>
