added content on homescreen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="site-id">
-            <h1><a href="index.html">🤍</a></h1>
+            <h1><a href="index.html">Angelica Palilio</a></h1>
         </div>
         <nav class="site-nav">
             <ul>
@@ -25,9 +25,38 @@
 
     <main>
         <section class="hero">
-            <h2>Hi, I'm Angelica</h2>
+            <h2>Hello, I'm Angelica</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum eveniet delectus dicta aperiam libero, repudiandae quibusdam labore, accusantium a asperiores molestiae doloribus laboriosam perferendis, vel at? Repellendus, voluptatem assumenda. Neque repudiandae magnam non vel tempora molestiae delectus distinctio soluta perferendis?</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? Tenetur ullam numquam possimus quae doloribus, veniam asperiores culpa expedita quibusdam vel ipsa quos suscipit neque. Rem, consequuntur dolorum asperiores hic sint quaerat sit! Asperiores, voluptatum aliquam possimus quasi nam eum tempore. Quam animi labore consequatur consectetur, perferendis veniam inventore quisquam, dolore sequi excepturi fugiat hic dolores ratione</p>
+
+        </section>
+
+
+        <section class="featured-works">
+            <h2 class="featured-works-heading">FEATURED WORKS</h2>
+            <div class="overlapping-cards">
+                <div class="ocard" data-index="0">
+                    <div class="inner-ocard">
+                        <div class="ocard-image-container">
+                            <img class="ocard-image" src=https://images.unsplash.com/photo-1530735606451-8f5f13955328?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="" />
+                        </div>
+                    </div>
+                </div>
+                <div class="ocard" data-index="0">
+                    <div class="inner-ocard">
+                        <div class="ocard-image-container">
+                            <img class="ocard-image" src="https://images.unsplash.com/photo-1620207418302-439b387441b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=100" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="works">
+            <h2 class="works-heading">WORKS</h2>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quod rerum commodi consequuntur possimus tempore quasi, totam esse consequatur rem expedita reiciendis dolores quibusdam, architecto vitae natus cumque illum. Aliquam eligendi ullam soluta aut quae sequi totam pariatur saepe vitae laboriosam nesciunt laudantium reprehenderit minima mollitia dicta itaque quas, fugiat beatae voluptates sit esse! Temporibus aut voluptatem molestias est corrupti perspiciatis rem ullam qui enim odio, eveniet, sed quae culpa reprehenderit quam dicta illo, sint vero. Qui ab quasi quam. Praesentium exercitationem libero incidunt sint nihil dolor consectetur quidem accusamus, nam dolore corrupti numquam tenetur, doloribus quae. Corporis nulla sed nobis reiciendis repellat ipsa, delectus natus a quibusdam itaque dolores laudantium necessitatibus quis molestias ad minus aspernatur saepe repellendus dolorum? Minus voluptatibus modi animi necessitatibus temporibus sunt, autem ducimus vero exercitationem. Iure molestiae vel, tempora voluptate quia, magni dicta excepturi cum impedit esse quasi est reiciendis saepe laborum. Delectus aspernatur veniam, repudiandae quis magni quam suscipit blanditiis ex sed officiis fuga maxime possimus rem ducimus nisi ad fugit obcaecati laborum aperiam nihil, modi quibusdam? Aperiam maxime atque delectus quae praesentium facere ut expedita rerum minima similique? Voluptates, amet quae? Optio quo iste deleniti earum explicabo minus architecto ut illum quam distinctio harum necessitatibus qui dolorum perferendis, tenetur suscipit sequi deserunt tempora, consequatur atque dolorem, odit ex? Sequi quis id sed! Voluptatum ab, beatae excepturi architecto, ut at praesentium magnam cum eum ipsum cumque pariatur quis quisquam saepe iure accusantium quibusdam, perspiciatis incidunt corporis minus ea. Ex libero odit rerum recusandae aut tempore, eum necessitatibus dolorem saepe similique repellendus, eligendi dolorum? Cupiditate perspiciatis ullam fugit delectus iusto placeat molestias, veritatis amet! Alias impedit velit exercitationem cum vero quis rerum sapiente molestiae itaque incidunt iure magnam aperiam non hic distinctio voluptatum magni, error fugiat unde quos libero. Ab nisi nemo architecto laudantium quam. Dolore aliquam illo rerum modi accusantium officiis suscipit quidem! Animi consequatur quasi repudiandae ea. Rerum, qui. Inventore necessitatibus tempore laborum quam, esse similique repellendus facilis? At placeat molestias, quia ut provident hic est, vitae alias quos, cum ab expedita fugit exercitationem iure fuga ducimus qui repudiandae deleniti? Saepe at nobis qui quidem optio sapiente, ex est porro fugit repellendus non tempora doloribus doloremque deserunt aperiam sint nemo ipsam maxime maiores. Assumenda debitis neque incidunt blanditiis iure explicabo asperiores magni. Harum animi illum sequi earum voluptates! Doloremque, nesciunt enim, reiciendis vitae labore officia eos suscipit iure totam rerum, hic earum.</p>
         </section>
 
     </main>
@@ -40,6 +69,12 @@
             </ul>
         </nav>
     </footer>
+    <!-- OVERLAPING CARD JS -->
+    <script src="https://unpkg.com/aatjs@0.0.3/dist/aat.min.js"></script>
+
+    <!-- MAIN JS FILE -->
+    <script src="js/script.js"></script>
+
 </body>
 
 </html>
