--- a/work.html
+++ b/work.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="site-id">
-            <h1><a href="index.html">🤍</a></h1>
+            <h1><a href="index.html">Angelica Palilio</a></h1>
         </div>
         <nav class="site-nav">
             <ul>
@@ -31,6 +31,9 @@
             </ul>
         </nav>
     </footer>
+
+    <!-- MAIN JS FILE -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
