--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <img class="ocard-image" src=https://images.unsplash.com/photo-1530735606451-8f5f13955328?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D alt="" />
+                            <img class="ocard-image" src=https://placehold.co/1920x1080 width="900" height="1080" alt="" />
                         </div>
                     </div>
                 </div>
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <img class="ocard-image" src="https://images.unsplash.com/photo-1620207418302-439b387441b0?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=100" alt="" />
+                            <img class="ocard-image" src=https://placehold.co/1980x1080 width="1980" height="1080" alt="" />
                         </div>
                     </div>
                 </div>
@@ -55,8 +55,32 @@
 
         <section class="works">
             <h2 class="works-heading">WORKS</h2>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quod rerum commodi consequuntur possimus tempore quasi, totam esse consequatur rem expedita reiciendis dolores quibusdam, architecto vitae natus cumque illum. Aliquam eligendi ullam soluta aut quae sequi totam pariatur saepe vitae laboriosam nesciunt laudantium reprehenderit minima mollitia dicta itaque quas, fugiat beatae voluptates sit esse! Temporibus aut voluptatem molestias est corrupti perspiciatis rem ullam qui enim odio, eveniet, sed quae culpa reprehenderit quam dicta illo, sint vero. Qui ab quasi quam. Praesentium exercitationem libero incidunt sint nihil dolor consectetur quidem accusamus, nam dolore corrupti numquam tenetur, doloribus quae. Corporis nulla sed nobis reiciendis repellat ipsa, delectus natus a quibusdam itaque dolores laudantium necessitatibus quis molestias ad minus aspernatur saepe repellendus dolorum? Minus voluptatibus modi animi necessitatibus temporibus sunt, autem ducimus vero exercitationem. Iure molestiae vel, tempora voluptate quia, magni dicta excepturi cum impedit esse quasi est reiciendis saepe laborum. Delectus aspernatur veniam, repudiandae quis magni quam suscipit blanditiis ex sed officiis fuga maxime possimus rem ducimus nisi ad fugit obcaecati laborum aperiam nihil, modi quibusdam? Aperiam maxime atque delectus quae praesentium facere ut expedita rerum minima similique? Voluptates, amet quae? Optio quo iste deleniti earum explicabo minus architecto ut illum quam distinctio harum necessitatibus qui dolorum perferendis, tenetur suscipit sequi deserunt tempora, consequatur atque dolorem, odit ex? Sequi quis id sed! Voluptatum ab, beatae excepturi architecto, ut at praesentium magnam cum eum ipsum cumque pariatur quis quisquam saepe iure accusantium quibusdam, perspiciatis incidunt corporis minus ea. Ex libero odit rerum recusandae aut tempore, eum necessitatibus dolorem saepe similique repellendus, eligendi dolorum? Cupiditate perspiciatis ullam fugit delectus iusto placeat molestias, veritatis amet! Alias impedit velit exercitationem cum vero quis rerum sapiente molestiae itaque incidunt iure magnam aperiam non hic distinctio voluptatum magni, error fugiat unde quos libero. Ab nisi nemo architecto laudantium quam. Dolore aliquam illo rerum modi accusantium officiis suscipit quidem! Animi consequatur quasi repudiandae ea. Rerum, qui. Inventore necessitatibus tempore laborum quam, esse similique repellendus facilis? At placeat molestias, quia ut provident hic est, vitae alias quos, cum ab expedita fugit exercitationem iure fuga ducimus qui repudiandae deleniti? Saepe at nobis qui quidem optio sapiente, ex est porro fugit repellendus non tempora doloribus doloremque deserunt aperiam sint nemo ipsam maxime maiores. Assumenda debitis neque incidunt blanditiis iure explicabo asperiores magni. Harum animi illum sequi earum voluptates! Doloremque, nesciunt enim, reiciendis vitae labore officia eos suscipit iure totam rerum, hic earum.</p>
+            <section class="works-grid">
+                <div class="works-project">
+                    <img src="img/sander-crombach-88-498U_yAM-unsplash.jpg" alt="Image 1">
+                    <p>Project 1</p>
+                </div>
+                <div class="works-project">
+                    <img src="image2.jpg" alt="Image 2">
+                    <p>Project 2</p>
+                </div>
+                <div class="works-project">
+                    <img src="image3.jpg" alt="Image 3">
+                    <p>Project 3</p>
+                </div>
+                <div class="works-project">
+                    <img src="image4.jpg" alt="Image 4">
+                    <p>Project 4</p>
+                </div>
+                <div class="works-project">
+                    <img src="image1.jpg" alt="Image 1">
+                    <p>Project 5</p>
+                </div>
+                <div class="works-project">
+                    <img src="image2.jpg" alt="Image 2">
+                    <p>Project 6</p>
+                </div>
+            </section>
         </section>
 
     </main>
@@ -70,10 +94,10 @@
         </nav>
     </footer>
     <!-- OVERLAPING CARD JS -->
-    <script src="https://unpkg.com/aatjs@0.0.3/dist/aat.min.js"></script>
+    <script src="js/aat.min.js"></script>
 
-    <!-- MAIN JS FILE -->
-    <script src="js/script.js"></script>
+    <!-- MAIN OCARD JS FILE -->
+    <script src="js/ocard.js"></script>
 
 </body>
 
