added text appear on hover on works grid

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2 class="works-heading">WORKS</h2>
             <section class="works-grid">
                 <div class="works-project">
-                    <img src="img/sander-crombach-88-498U_yAM-unsplash.jpg" alt="Image 1">
+                    <img src="https://placehold.co/600x400" alt="Image 1">
                     <p>Project 1</p>
                 </div>
                 <div class="works-project">
