--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="work.html">Work</a></li>
+                <li><a href="#works">Works</a></li>
                 <li><a href="about.html">About</a></li>
 
             </ul>
@@ -53,7 +53,7 @@
 
         </section>
 
-        <section class="works">
+        <section class="works" id="works">
             <h2 class="works-heading">WORKS</h2>
             <section class="works-grid">
                 <div class="works-project">
@@ -88,7 +88,7 @@
     <footer>
         <nav class="social-nav">
             <ul class="icon">
-                <li><a href="work.html">Work</a></li>
+                <li><a href="#works">Works</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
