added a link to one of the projects to test

--- a/index.html
+++ b/index.html
@@ -38,15 +38,20 @@
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <img class="ocard-image" src=https://placehold.co/1920x1080 width="900" height="1080" alt="" />
+                            <a href="araw.html"><img class="ocard-image" src="img/combinedsunscreen.jpg" alt="Sunscreen Image" width="600" height="400">
+                            </a>
+
                         </div>
                     </div>
                 </div>
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <img class="ocard-image" src=https://images.unsplash.com/photo-1530735606451-8f5f13955328?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D width="1980" height="1080" alt="" />
+                            <a href="#">
+                                <img class="ocard-image" src="https://placehold.co/600x400" width="1980" height="1080" alt="Sunscreen Image" />
+                            </a>
                         </div>
+
                     </div>
                 </div>
             </div>
