added some content in a project for test

--- a/araw.html
+++ b/araw.html
@@ -42,14 +42,14 @@
         <section class="araw-container">
             <div class="project-grid">
                 <div class="project-card full-width">
-                    <img src="https://placehold.co/600x400" alt="Project 1" class="project-image">
+                    <img src="img/adult.jpg" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                         <h3>Project 1</h3>
                         <p>Description of the project...</p>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                    <img src="img/facestick.jpg" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
