made edits to homepage and subpage

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Angelica Palilio | Portfolio</title>
+    <title>About</title>
     <meta name="viewport" content="This is my Portfolio">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -16,8 +16,8 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/index.html">Work</a></li>
+                <li><a href="/about.html">About</a></li>
 
             </ul>
         </nav>
@@ -26,7 +26,7 @@
     <footer>
         <nav class="social-nav">
             <ul class="icon">
-                <li><a href="work.html">Work</a></li>
+                <li><a href="/index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
