--- a/araw.html
+++ b/araw.html
@@ -24,13 +24,13 @@
     </header>
 
     <main>
-
-        <section class="hero">
-            <div class="hero-content">
+        <section class="project-hero">
+            <div class="project-hero-content">
                 <h1>Araw</h1>
                 <p>A Branding Project</p>
             </div>
         </section>
+
 
         <section class="challenge">
             <h2>Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
@@ -44,8 +44,7 @@
                 <div class="project-card full-width">
                     <img src="img/adult.jpg" alt="Project 1" class="project-image">
                     <div class="project-overlay">
-                        <h3>Project 1</h3>
-                        <p>Description of the project...</p>
+
                     </div>
                 </div>
                 <div class="project-card">
