--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
 
     <main>
         <section class="hero">
-            <h2>Hello, I'm Angelica</h2>
+            <h2>Angelica Palilio</h2>
 
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? Tenetur ullam numquam possimus quae doloribus, veniam asperiores culpa expedita quibusdam vel ipsa quos suscipit neque. Rem, consequuntur dolorum asperiores hic sint quaerat sit! Asperiores, voluptatum aliquam possimus quasi nam eum tempore. Quam animi labore consequatur consectetur, perferendis veniam inventore quisquam, dolore sequi excepturi fugiat hic dolores ratione</p>
+            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
+
+            <!-- <a href="#works" class="cta-button">View My Work</a>
+            </div> -->
 
         </section>
 
@@ -38,7 +41,7 @@
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <a href="araw.html"><img class="ocard-image" src="img/combinedsunscreen.jpg" alt="Sunscreen Image" width="600" height="400">
+                            <a href="araw.html"><img class="ocard-image" src="img/combinedsunscreen.jpg" alt="Sunscreen Image" width="1920" height="1800">
                             </a>
 
                         </div>
@@ -63,27 +66,19 @@
             <section class="works-grid">
                 <div class="works-project">
                     <img src="https://placehold.co/600x400" alt="Image 1">
-                    <p>Project 1</p>
+                    <p>Cinque Terre</p>
                 </div>
                 <div class="works-project">
                     <img src="image2.jpg" alt="Image 2">
-                    <p>Project 2</p>
+                    <p>Charles and Rae Eames Editorial</p>
                 </div>
                 <div class="works-project">
                     <img src="image3.jpg" alt="Image 3">
-                    <p>Project 3</p>
+                    <p>Krishna Cow Sanctuary</p>
                 </div>
                 <div class="works-project">
                     <img src="image4.jpg" alt="Image 4">
-                    <p>Project 4</p>
-                </div>
-                <div class="works-project">
-                    <img src="image1.jpg" alt="Image 1">
-                    <p>Project 5</p>
-                </div>
-                <div class="works-project">
-                    <img src="image2.jpg" alt="Image 2">
-                    <p>Project 6</p>
+                    <p>Boozi Hard Seltzer</p>
                 </div>
             </section>
         </section>
