testing to see how it looks on mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="site-id">
+        <div class="site-header">
             <h1><a href="index.html">Angelica Palilio</a></h1>
         </div>
         <nav class="site-nav">
