--- a/araw.html
+++ b/araw.html
@@ -16,7 +16,7 @@
         <nav class="site-nav">
             <ul>
 
-                <li><a href="/index.html">Works</a></li>
+                <li><a href="index.html">Works</a></li>
                 <li><a href="/about.html">About</a></li>
 
             </ul>
