--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Angelica Palilio | Portfolio</title>
-    <meta name="viewport" content="This is my Portfolio">
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
