added another subpage

--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Araw</title>
+    <title>Cinque Terre</title>
     <meta name="viewport" content="This is my Portfolio">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -26,34 +26,35 @@
     <main>
         <section class="project-hero">
             <div class="project-hero-content">
-                <h1>Araw</h1>
-                <p>A Branding Project</p>
+                <h1>Cinque Terre</h1>
+                <p>A Destination Emblem</p>
             </div>
         </section>
 
 
         <section class="challenge">
-            <h2>Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
+            <h2>Uncover the charm of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
 
             <h4>THE CHALLENGE</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
+            <h3>How can you channel the beauty of Cinque Terre in every brand element?</h3>
+            <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
         </section>
 
         <section class="araw-container">
             <div class="project-grid">
                 <div class="project-card full-width">
-                    <img src="img/adult.jpg" alt="Project 1" class="project-image">
+                    <img src="img/postage.jpg" alt="Project 1" class="project-image">
                     <div class="project-overlay">
 
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/facestick.jpg" alt="Project 2" class="project-image">
+                    <img src="img/mug.jpg" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/baby-sunscreen.jpg" alt="Project 3" class="project-image">
+                    <img src="img/postcard.jpg" alt="Project 3" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
