--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <a href="araw.html"><img class="ocard-image" src="img/combinedsunscreen.jpg" alt="Sunscreen Image" width="1920" height="1800">
+                            <a href="araw.html"><img class="ocard-image" src="img/combined-sunscreen.jpg" alt="Sunscreen Image" width="1920" height="1800">
                             </a>
 
                         </div>
@@ -75,7 +75,8 @@
             <h2 class="works-heading">WORKS</h2>
             <section class="works-grid">
                 <div class="works-project">
-                    <img src="https://placehold.co/600x400" alt="Image 1">
+                    <a href="cinqueterre.html"><img class="ocard-image" src="img/cinqueterreblacklogo.svg" alt="Cinque Terre Logo" width="1920" height="1800">
+                    </a>
                     <p>Cinque Terre</p>
                 </div>
                 <div class="works-project">
