--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h2 class="works-heading">WORKS</h2>
             <section class="works-grid">
                 <div class="works-project">
-                    <a href="cinqueterre.html"><img class="ocard-image" src="img/cinqueterreblacklogo.svg" alt="Cinque Terre Logo" width="1920" height="1800">
+                    <a href="cinqueterre.html"><img class="ocard-image" src="img/cinqueterreblacklogo.png" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
