making changes in portfolio

--- a/araw.html
+++ b/araw.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="site-id">
-            <h1><a href="index.html">Angelica Palilio</a></h1>
+            <h3><a href="index.html">Angelica Palilio</a></h3>
         </div>
         <nav class="site-nav">
             <ul>
@@ -26,6 +26,7 @@
     <main>
         <section class="project-hero">
             <div class="project-hero-content">
+
                 <h1>Araw</h1>
                 <p>A Branding Project</p>
             </div>
@@ -42,18 +43,18 @@
         <section class="araw-container">
             <div class="project-grid">
                 <div class="project-card full-width">
-                    <img src="img/adult.jpg" alt="Project 1" class="project-image">
+                    <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
 
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/facestick.jpg" alt="Project 2" class="project-image">
+                    <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/baby-sunscreen.jpg" alt="Project 3" class="project-image">
+                    <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
