--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="site-id">
-            <h1><a href="index.html">Angelica Palilio</a></h1>
+            <h3><a href="index.html">Angelica Palilio</a></h3>
         </div>
         <nav class="site-nav">
             <ul>
@@ -33,14 +33,16 @@
 
 
         <section class="challenge">
-            <h2>Uncover the charm of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
+            <h2>Uncover the <b><i>charm</i></b> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
 
             <h4>THE CHALLENGE</h4>
-            <h3>How can you channel the beauty of Cinque Terre in every brand element?</h3>
+
+            <h2>How can you channel the beauty of Cinque Terre in every brand element?</h2>
+
             <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
         </section>
 
-        <section class="araw-container">
+        <section class="cinqueterre-container">
             <div class="project-grid">
                 <div class="project-card full-width">
                     <img src="img/postage.jpg" alt="Project 1" class="project-image">
