--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="site-header">
-            <h1><a href="index.html">Angelica Palilio</a></h1>
+            <h3><a href="index.html">Angelica Palilio</a></h3>
         </div>
         <nav class="site-nav">
             <ul>
@@ -44,16 +44,15 @@
 
         </section>
 
-
         <section class="featured-works">
             <h2 class="featured-works-heading">FEATURED WORKS</h2>
             <div class="overlapping-cards">
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <a href="araw.html"><img class="ocard-image" src="img/combined-sunscreen.jpg" alt="Sunscreen Image" width="1920" height="1800">
+                            <a href="araw.html"><img class="ocard-image" src="img/webp/combined-sunscreen.webp" alt="Sunscreen Image" width="1920" height="1800">
                             </a>
-
+                            <div class="project-name">Araw</div>
                         </div>
                     </div>
                 </div>
@@ -61,8 +60,9 @@
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
                             <a href="#">
-                                <img class="ocard-image" src="https://placehold.co/600x400" width="1980" height="1080" alt="Sunscreen Image" />
+                                <img class="ocard-image" src="#" width="1980" height="1080" alt="The Resting Mug" />
                             </a>
+                            <div class="project-name">The Resting Mug</div>
                         </div>
 
                     </div>
@@ -75,7 +75,7 @@
             <h2 class="works-heading">WORKS</h2>
             <section class="works-grid">
                 <div class="works-project">
-                    <a href="cinqueterre.html"><img class="ocard-image" src="img/cinqueterreblacklogo.png" alt="Cinque Terre Logo" width="1920" height="1800">
+                    <a href="cinqueterre.html"><img class="ocard-image" src="img/png/cinqueterre-logo-01.png" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
