made changes to css for subpages

--- a/araw.html
+++ b/araw.html
@@ -25,19 +25,28 @@
 
     <main>
         <section class="project-hero">
-            <div class="project-hero-content">
-
-                <h1>Araw</h1>
-                <p>A Branding Project</p>
+            <div class="image-wrapper-fullwidth-cover">
+                <img src="img/webp/combined-sunscreen.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
-
         <section class="challenge">
-            <h2>Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
+            <div class="col-1 push-2">
+                <ul>
+                    <li><strong>Client:</strong> <br>Student Project
+                    </li>
+                    <li><strong>Project Type:</strong> <br>Tourism Logo
+                    </li>
+                    <li><strong>Software:</strong> <br>Adobe Illustrator</li>
+                </ul>
+            </div>
 
-            <h4>THE CHALLENGE</h4>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
+            <div class="col-3 push-5">
+                <h2>Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
+
+                <h4>The Challenge</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
+            </div>
         </section>
 
         <section class="araw-container">
