--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -23,40 +23,49 @@
         </nav>
     </header>
 
+
     <main>
         <section class="project-hero">
-            <div class="project-hero-content">
-                <h1>Cinque Terre</h1>
-                <p>A Destination Emblem</p>
+            <div class="image-wrapper-fullwidth-cover">
+                <img src="img/webp/postage.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
-
         <section class="challenge">
-            <h2>Uncover the <b><i>charm</i></b> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
+            <div class="col-1 push-2">
+                <ul>
+                    <li><strong>Client:</strong> <br>Student Project
+                    </li>
+                    <li><strong>Project Type:</strong> <br>Tourism Logo
+                    </li>
+                    <li><strong>Software:</strong> <br>Adobe Illustrator</li>
+                </ul>
+            </div>
 
-            <h4>THE CHALLENGE</h4>
+            <div class="col-3 push-5">
+                <h2>Uncover the <b><i>charm</i></b> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
 
-            <h2>How can you channel the beauty of Cinque Terre in every brand element?</h2>
-
-            <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
+                <h4>The Challenge</h4>
+                <h2>How can you channel the beauty of Cinque Terre in every brand element?</h2>
+                <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
+            </div>
         </section>
 
         <section class="cinqueterre-container">
             <div class="project-grid">
                 <div class="project-card full-width">
-                    <img src="img/postage.jpg" alt="Project 1" class="project-image">
+                    <img src="img/webp/postage.webp" alt="Project 1" class="project-image">
                     <div class="project-overlay">
 
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/mug.jpg" alt="Project 2" class="project-image">
+                    <img src="img/webp/mug.webp" alt="Project 2" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="img/postcard.jpg" alt="Project 3" class="project-image">
+                    <img src="img/webp/postcard.webp" alt="Project 3" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
