--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <a href="araw.html"><img class="ocard-image" src="img/webp/combined-sunscreen.webp" alt="Sunscreen Image" width="1920" height="1800">
+                            <a href="araw.html"><img class="ocard-image" src="img/webp/combined-sunscreen(resized).webp" alt="Sunscreen Image" width="1920" height="1280">
                             </a>
                             <div class="project-name">Araw</div>
                         </div>
@@ -59,8 +59,7 @@
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
                         <div class="ocard-image-container">
-                            <a href="#">
-                                <img class="ocard-image" src="#" width="1980" height="1080" alt="The Resting Mug" />
+                            <a href="araw.html"><img class="ocard-image" src="img/webp/mug.webp" alt="The Resting Mug" width="1920" height="1280">
                             </a>
                             <div class="project-name">The Resting Mug</div>
                         </div>
@@ -75,7 +74,7 @@
             <h2 class="works-heading">WORKS</h2>
             <section class="works-grid">
                 <div class="works-project">
-                    <a href="cinqueterre.html"><img class="ocard-image" src="img/png/cinqueterre-logo-01.png" alt="Cinque Terre Logo" width="1920" height="1800">
+                    <a href="cinqueterre.html"><img class="ocard-image" src="img/webp/cinqueterre-black-transparent.webp" alt="Cinque Terre Logo" width="1920" height="1800">
                     </a>
                     <p>Cinque Terre</p>
                 </div>
