--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -17,7 +17,7 @@
             <ul>
 
                 <li><a href="index.html">Works</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
 
             </ul>
         </nav>
