removed js refresh

--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -4,14 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Cinque Terre</title>
-    <meta name="viewport" content="This is my Portfolio">
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <header>
         <div class="site-id">
-            <h3><a href="index.html">Angelica Palilio</a></h3>
+            <h3><a href="index.html">AP</a></h3>
         </div>
         <nav class="site-nav">
             <ul>
@@ -31,24 +40,29 @@
             </div>
         </section>
 
-        <section class="challenge">
-            <div class="col-1 push-2">
-                <ul>
-                    <li><strong>Client:</strong> <br>Student Project
-                    </li>
-                    <li><strong>Project Type:</strong> <br>Tourism Logo
-                    </li>
-                    <li><strong>Software:</strong> <br>Adobe Illustrator</li>
-                </ul>
-            </div>
+        <div class="container wide">
+            <div class="row intro">
 
-            <div class="col-3 push-5">
-                <h2>Uncover the <b><i>charm</i></b> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
+                <div class="one-fourth">
+                    <ul class="project-meta-list">
+                        <li><strong class="caps">Client:</strong> Student Project</li>
+                        <li><strong class="caps">Project Type:</strong> Tourism Logo</li>
+                        <li><strong class="caps">Software:</strong> Adobe Illustrator</li>
+                    </ul>
+                </div>
 
-                <h4>The Challenge</h4>
-                <h2>How can you channel the beauty of Cinque Terre in every brand element?</h2>
-                <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
+                <div class="col-9 push-2">
+                    <div class="container-content">
+                        <h2 class="p-top">Uncover the <i>charm</i> of Cinque Terre, where vibrant villages meet breathtaking cliffs and the Ligurian Sea, creating an unforgettable Italian escape.</h2>
+
+                        <h5>The Challenge</h5>
+                        <h3>How can you channel the beauty of Cinque Terre in every brand element?</h3>
+                        <p>To capture the essence of Cinque Terre, I conducted extensive research to gain a deeper understanding of its spirit, arts, culture, history, and present-day identity. Next, I sketched several ideas, narrowing them down to three key concepts, which I then digitized. For the final logo, I incorporated vibrant colors inspired by the villages and textures that evoke the rugged cliffs and coastal landscapes. The logo creates a cohesive and authentic representation of Cinque Terre’s charm.</p>
+                    </div>
+                </div>
             </div>
+        </div>
+
         </section>
 
         <section class="cinqueterre-container">
