--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 </head>
 
 <body>
     <header>
         <div class="site-header">
-            <h3><a href="index.html">Angelica Palilio</a></h3>
+            <h3><a href="index.html">AP</a></h3>
         </div>
         <nav class="site-nav">
             <ul>
@@ -45,7 +46,7 @@
         </section>
 
         <section class="featured-works">
-            <h2 class="featured-works-heading">FEATURED WORKS</h2>
+            <h2 class="featured-works-heading">Featured Projects</h2>
             <div class="overlapping-cards">
                 <div class="ocard" data-index="0">
                     <div class="inner-ocard">
@@ -71,7 +72,7 @@
         </section>
 
         <section class="works" id="works">
-            <h2 class="works-heading">WORKS</h2>
+            <h2 class="works-heading">Projects</h2>
             <section class="works-grid">
                 <div class="works-project">
                     <a href="cinqueterre.html"><img class="ocard-image" src="img/webp/cinqueterre-black-transparent.webp" alt="Cinque Terre Logo" width="1920" height="1800">
