--- a/araw.html
+++ b/araw.html
@@ -4,14 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Araw</title>
-    <meta name="viewport" content="This is my Portfolio">
+    <!-- META DESCRIPTION -->
+    <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
+
+    <!-- META KEYWORDS -->
+    <meta name="keywords" content="Web design, web development, ux, ui, frontend web development, html, css, javascript.">
+
+    <!-- FOR RESPONSIVE DESIGN -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
     <header>
         <div class="site-id">
-            <h3><a href="index.html">Angelica Palilio</a></h3>
+            <h3><a href="index.html">AP</a></h3>
         </div>
         <nav class="site-nav">
             <ul>
@@ -30,50 +39,55 @@
             </div>
         </section>
 
-        <section class="challenge">
-            <div class="col-1 push-2">
-                <ul>
-                    <li><strong>Client:</strong> <br>Student Project
-                    </li>
-                    <li><strong>Project Type:</strong> <br>Tourism Logo
-                    </li>
-                    <li><strong>Software:</strong> <br>Adobe Illustrator</li>
-                </ul>
-            </div>
+        <div class="container wide">
+            <div class="row intro">
 
-            <div class="col-3 push-5">
-                <h2>Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
-
-                <h4>The Challenge</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
-            </div>
-        </section>
-
-        <section class="araw-container">
-            <div class="project-grid">
-                <div class="project-card full-width">
-                    <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-
-                    </div>
+                <div class="one-fourth">
+                    <ul class="project-meta-list">
+                        <li><strong class="caps">Client:</strong> Student Project</li>
+                        <li><strong class="caps">Project Type:</strong> Brand Identity</li>
+                        <li><strong class="caps">Software:</strong> Adobe Illustrator & Photoshop</li>
+                    </ul>
                 </div>
-                <div class="project-card">
-                    <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card full-width">
-                    <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
-                    <div class="project-overlay">
+
+                <div class="col-9 push-2">
+                    <div class="container-content">
+                        <h2 class="p-top">Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
+
+                        <h5>The Challenge</h5>
+                        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, dicta.</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus nulla accusantium temporibus natus magni sit tempora magnam veritatis, quae architecto odio quos totam quisquam quod ducimus sed repudiandae, vitae harum sequi voluptatum placeat iure. Inventore ut corrupti dolor, quaerat voluptatibus necessitatibus deserunt harum perferendis, dolorem blanditiis voluptatum culpa, a ipsum error modi. Quam vitae a inventore pariatur dolore quae provident adipisci ex omnis iusto incidunt enim rem ea, voluptas voluptates itaque! Nesciunt, officia tempora. Vitae reiciendis porro at magnam pariatur!</p>
                     </div>
                 </div>
             </div>
-        </section>
+
+            </section>
+
+            <section class="araw-container">
+                <div class="project-grid">
+                    <div class="project-card full-width">
+                        <img src="img/webp/adult-sunscreen.webp" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/webp/facestick.webp" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/webp/baby-sunscreen.webp" alt="Project 3" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card full-width">
+                        <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+            </section>
     </main>
 
 
@@ -91,6 +105,7 @@
     <!-- MAIN OCARD JS FILE -->
     <script src="js/ocard.js"></script>
 
+</body>
 </body>
 
 </html>
