made changes to grid for case study pages

--- a/araw.html
+++ b/araw.html
@@ -50,7 +50,7 @@
                     </ul>
                 </div>
 
-                <div class="col-9 push-2">
+                <div class="three-fourths">
                     <div class="container-content">
                         <h2 class="p-top">Enjoy safe, gentle sun protection for all skin types, from babies to adults, with a commitment to sustainability.</h2>
 
